# ChangeLog for app-admin/ajenti
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ajenti-1.2.21 (02 Jul 2014)

  02 Jul 2014; Justin Lecher <jlec@gentoo.org> +ajenti-1.2.21.ebuild,
  +files/ajenti.init, +metadata.xml:
  Version Bump

  08 Mar 2013; Patrick Lauer <patrick@gentoo.org> ajenti-0.6.1.ebuild:
  Fixing distutils usage

  26 Dec 2011; Michael Palimaka (kensington) <kensington@astralcloak.net>
  -ajenti-0.5.101.ebuild, -ajenti-0.6.0.ebuild:
  Remove old versions.

  03 Dec 2011; Markos Chandras <hwoarang@gentoo.org> ChangeLog:
  whitespace. Drop || die because of EAPI4

  04 Nov 2011; Eugeny 'Punkoff' Pankov <john.pankov@gmail.com>
  +ajenti-0.6.1.ebuild, +files/ajenti:
  Version bump for ajenti

  23 Oct 2011; Eugeny 'Punkoff' Pankov <john.pankov@gmail.com>
  +ajenti-0.6.0.ebuild:
  Version bump for ajenti

  20 Oct 2011; Eugeny 'Punkoff' Pankov <john.pankov@gmail.com>
  +ajenti-0.5.101.ebuild, +metadata.xml:
  Initial ebuild for bug #387595. Thanks to Tommy, _AxS_ and mgorny for support.
