@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <maintainer>
-    <email>jlec@j-schmitz.net</email>
-    <name>Justin Lecher (jlec)</name>
-  </maintainer>
-  <maintainer>
-    <email>johann@j-schmitz.net</email>
-    <name>Johann Schmitz</name>
-  </maintainer>
-  <!--
+	<maintainer>
+		<email>jlec@j-schmitz.net</email>
+		<name>Justin Lecher (jlec)</name>
+	</maintainer>
+	<maintainer>
+		<email>johann@j-schmitz.net</email>
+		<name>Johann Schmitz</name>
+	</maintainer>
+	<!--
 	<use>
 		<flag name=''></flag>
 	</use>
 -->
+	<upstream>
+		<remote-id type="github">Eugeny/ajenti</remote-id>
+	</upstream>
 </pkgmetadata>
