@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/ajenti
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  app-admin/ajenti: Add github to remote-id in metadata.xml
 
 *ajenti-1.2.21 (02 Jul 2014)
 
@@ -29,4 +32,3 @@
   20 Oct 2011; Eugeny 'Punkoff' Pankov <john.pankov@gmail.com>
   +ajenti-0.5.101.ebuild, +metadata.xml:
   Initial ebuild for bug #387595. Thanks to Tommy, _AxS_ and mgorny for support.
-
